fixed spacing issue in header with request, upload and mentor list title

--- a/src/styles/partials/_header.scss
+++ b/src/styles/partials/_header.scss
@@ -113,7 +113,7 @@
         position: absolute;
         width: 3.2475rem;
         height: 1.1875rem;
-        left: 58.67%;
+        left: calc(53.98% + 4.6225rem);
         top: 1.5625rem;
 
         font-family: Droid Sans;
@@ -129,7 +129,7 @@
         position: absolute;
         width: 7.5rem;
         height: 2.375rem;
-        left: 63.04%;
+        left: calc(53.98% + 9.05rem);
         top: 1.5625rem;
 
         font-family: Droid Sans;
